work done on the database user model. Also started working on the blockchain wallet api

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,6 +15,7 @@
     <div>
         <a id="sender" href="#">Send a Message</a>
         <ul id="receiver"></ul>
+        <div>{{address}}</div>
     </div>
     </div>
     <footer>
