--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <div class="content">
+    <div class="content" data-user="{{data}}">
     <div>
         <a id="sender" href="#">Send a Message</a>
         <ul id="receiver"></ul>
