working on the html

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,9 +12,9 @@
   </head>
   <body>
     <div class="content" data-user="{{data}}">
+      {{> aside}}
+      {{> game}}
     <div>
-        <a id="sender" href="#">Send a Message</a>
-        <ul id="receiver"></ul>
         <div>{{address}}</div>
     </div>
     </div>
