adding assets project. should convert to sprite after

--- a/views/partials/game.hbs
+++ b/views/partials/game.hbs
@@ -1,5 +1,5 @@
 <div id="game">
-    <ul>
+    <ul class="bet-type">
         <li>Free play!</li>
         <li>Bet 0.001 XBT</li>
         <li>Bet 0.005 XBT</li>
