--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,8 @@
     <meta name="description" content="later">
     <meta name="author" content="aaa">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
     <div class="content" data-user="{{data}}">
