--- a/views/partials/aside.hbs
+++ b/views/partials/aside.hbs
@@ -1,13 +1,14 @@
-<aside id="aside">
-    <header id="header">
-        <a class='logo' href="#">
-            <img src="/assets/images/logo.png" alt="Bitcoin Kamikaze">
-        </a>
-        <nav id="menu">
+<aside class="aside">
+    <header class="header">
+        <a class="logo" href="{{url}}"></a>
+        <nav class="menu clearfix">
             <ul>
                 <li><a href="#">Deposit</a></li>
+                <li> • </li>
                 <li><a href="#">Withdraw</a></li>
+                <li> • </li>
                 <li><a href="#">Refer</a></li>
+                <li> • </li>
                 <li><a href="#">Forum</a></li>
             </ul>
         </nav>
@@ -20,9 +21,7 @@
     </header>
 <div id="info">
     <span>Balance: {{balance}}</span>
-    <a href="#" title="Refresh Balance">
-        <img src="/assets/images/refresh.png">
-    </a>
+    <a href="#" class="refresh"></a>
     <span>Current bet: </span><span class="value" id="bet">0</span>
     <span>Jackpot: </span><span class="value" id="jackpot">0.001039</span>
 
@@ -33,7 +32,7 @@
     First choose your bet amount, then choose a square from the top row and work your way down. Each row contains a bomb so try to avoid it!<br><br>
     If you hit a bomb, you lose your bet, otherwise you may choose to take your reward at any time by clicking the buttons to the right of the row you've just played.<br></p>
 
-<p><b> Random Jackpot </b><img style="vertical-align:middle;" src="/assets/images/treasure.png"><br>
+<p><b> Random Jackpot </b><span class="treasure"></span><br>
     Some games also contain a special jackpot square. Hit this and you will automatically win the jackpot in addition to whatever you win from the game being played. Note: Free play games are not eligible to receive jackpot winnings.</p>
 
 </aside>
