styling and markup

--- a/views/partials/aside.hbs
+++ b/views/partials/aside.hbs
@@ -12,27 +12,35 @@
                 <li><a href="#">Forum</a></li>
             </ul>
         </nav>
-        <div>
-            <p>This is your personal link. Keep it safe, and <em>keep it secret!</em></p>
-            <a href="/user/83549/uA1cdR7gwVpBaq9e" class="link">http://bitcoinkamikaze.com/user/83549/uA1cdR7gwVpBaq9e</a>
-            <p>Earn bitcoins by promoting this site (Referral link): </p>
-            <span class="link" style="font-weight:normal;">http://bitcoinkamikaze.com/ref/83549</span>
-        </div>
     </header>
-<div id="info">
-    <span>Balance: {{balance}}</span>
-    <a href="#" class="refresh"></a>
-    <span>Current bet: </span><span class="value" id="bet">0</span>
-    <span>Jackpot: </span><span class="value" id="jackpot">0.001039</span>
-
-
-</div>
-
-<p><b> How To Play </b><br><br>
-    First choose your bet amount, then choose a square from the top row and work your way down. Each row contains a bomb so try to avoid it!<br><br>
-    If you hit a bomb, you lose your bet, otherwise you may choose to take your reward at any time by clicking the buttons to the right of the row you've just played.<br></p>
-
-<p><b> Random Jackpot </b><span class="treasure"></span><br>
-    Some games also contain a special jackpot square. Hit this and you will automatically win the jackpot in addition to whatever you win from the game being played. Note: Free play games are not eligible to receive jackpot winnings.</p>
-
+    <div class="info">
+        <p>
+            This is your personal link. Keep it safe, and <em>keep it secret!</em>
+            <a href="/user/83549/uA1cdR7gwVpBaq9e" class="link">http://bitcoinkamikaze.com/user/83549/uA1cdR7gwVpBaq9e</a>
+        </p>
+        <p>
+            Earn bitcoins by promoting this site (Referral link):
+            <span class="link" style="font-weight:normal;">http://bitcoinkamikaze.com/ref/83549</span>
+        </p>
+        <div class="info-box bold">
+            <div>
+                <span>Balance:</span>
+                <a href="#" class="refresh"></a>
+                <span>Current bet: </span><span class="value bet-value">0{{balance}}</span>
+            </div>
+            <span>Jackpot: </span><span class="value jackpot-value">0.001039</span>
+        </div>
+        <h2>How To Play</h2>
+        <p>
+            First choose your bet amount, then choose a square from the top row and work your way down. Each row contains a bomb so try to avoid it!
+        </p>
+        <p>
+            If you hit a bomb, you lose your bet, otherwise you may choose to take your reward at any time by clicking the buttons to the right of the row you've just played.
+        </p>
+        <h2 class="inline">Random Jackpot</h2>
+        <span class="treasure"></span>
+        <p>
+            Some games also contain a special jackpot square. Hit this and you will automatically win the jackpot in addition to whatever you win from the game being played. Note: Free play games are not eligible to receive jackpot winnings.
+        </p>
+    </div>
 </aside>
