--- a/views/partials/game.hbs
+++ b/views/partials/game.hbs
@@ -1,4 +1,4 @@
-<div id="game">
+<article class="game">
     <ul class="bet-type">
         <li>Free play!</li>
         <li>Bet 0.001 XBT</li>
@@ -72,5 +72,4 @@
 <input type="button" class="sqd" onclick="$.step(5,8);" disabled="disabled" id="5_8" value=" ">
 <input type="button" class="takedis reward" disabled="disabled" onclick="$.win_game();" id="level9" value="Take bet * 6"><br>
            </form>
-
-         </div>
+</article>
