--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,16 +1,30 @@
 /* CSS BEGIN*/
 body {
     width: 900px;
-    margin: auto;
+    margin: 20px auto;
     font-family: Tahoma, Geneva, sans-serif;
 }
-
 ul {
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
-
+p {
+	padding-bottom: 15px;
+	line-height: 17px;
+}
+aside,
+article {
+	float: left;
+	width: 46.5%;
+}
+aside {
+	padding-right: 20px;
+}
+article {
+	padding: 0 20px;
+	font-size: 11px;
+}
 /*Clearfix*/
 .clearfix:before,
 .clearfix:after {
@@ -23,11 +37,29 @@ ul {
 .clearfix {
   zoom:1; /* For IE 6/7 (trigger hasLayout) */
 }
-
-aside {
+.bold {
+	font-weight: bold;
+}
+h2 {
+	font-weight: bold;
+	margin-bottom: 12px;
+}
+aside,
+h2 {
 	font-size: 14px;	
 }
-
+aside .link {
+	line-height: 20px;
+	color: #eb6120;
+	display: block;
+}
+header {
+	width: 340px;
+	margin-bottom: 20px;
+}
+.inline {
+	display: inline-block;
+}
 .menu {
 	background: #804e2e;
 	border-radius: 5px;
@@ -35,59 +67,67 @@ aside {
 	color: white;
 	font-weight: bold;
 }
-
 .menu li {
 	float: left;
-	padding: 5px 10px;
+	padding: 5px 7px;
 }
-
 .menu a {
 	color: white;
 	text-decoration: none;
 }
-
 .menu a:hover {
 	color: #888;
 }
-
+.info {
+	color: #666;
+}
+.info-box {
+	margin-bottom: 20px;
+	border: solid 1px #804e2e;
+	border-radius: 5px;
+	padding: 15px 0;
+	text-align: center;
+}
+.info-box span {
+	line-height: 20px;
+	padding: 4px;
+}
+.value {
+	color: #804e2e;
+}
 .bet-type {
     list-style: none;
+    margin: 0 auto;
+    display: table;
     color: white;
 }
-
 .bet-type li {
     border-radius: 5px;
     text-align: center;
     float: left;
-    width: 33%;
+    width: 133px;
     height: 38px;
     background-color: #804e2e;
 }
-
 .logo, .bomb, .step, .treasure, .refresh{
 	background: url(../images/sprites.png) no-repeat;
 }
-
 .logo{
 	background-position: -7px 0;
-	width: 340px;
 	height: 109px;
 	display: block;
 	margin: 10px 0;
 }
-
 .bomb{
 	background-position: -6px -119px ;
 	width: 32px;
 	height: 32px;
 }
-
 .step{
 	background-position: -6px -163px ;
 	width: 32px;
 	height: 32px;
 }
-
 .treasure{
 	background-position: -5px -209px ;
 	width: 32px;
@@ -95,7 +135,6 @@ aside {
 	display: inline-block;
 	vertical-align: middle;
 }
-
 .refresh{
 	background-position: -6px -255px ;
 	width: 16px;
@@ -103,4 +142,3 @@ aside {
 	display: inline-block;
 	vertical-align: middle;
 }
-
