--- a/views/partials/game.hbs
+++ b/views/partials/game.hbs
@@ -1,75 +1,111 @@
 <article class="game">
-    <ul class="bet-type">
-        <li>Free play!</li>
-        <li>Bet 0.001 XBT</li>
-        <li>Bet 0.005 XBT</li>
-        <li>Bet 0.01 XBT</li>
-        <li>Bet 0.025 XBT</li>
-        <li>Bet 0.05 XBT</li>
-        <li>Bet 0.1 XBT</li>
-        <li>Bet 0.2 XBT</li>
-        <li>Bet 0.4 XBT</li>
-        <li>Bet 0.0001 XBT</li>
-        <li>Bet 0.00025 XBT</li>
-        <li>Bet 0.0005 XBT</li>
+    <div class="bet-type">
+        <ul>
+            <li class="tile">Free play!</li>
+            <li class="tile">Bet 0.001 XBT</li>
+            <li class="tile">Bet 0.005 XBT</li>
+            <li class="tile">Bet 0.01 XBT</li>
+            <li class="tile">Bet 0.025 XBT</li>
+            <li class="tile">Bet 0.05 XBT</li>
+            <li class="tile">Bet 0.1 XBT</li>
+            <li class="tile">Bet 0.2 XBT</li>
+            <li class="tile">Bet 0.4 XBT</li>
+            <li class="tile">Bet 0.0001 XBT</li>
+            <li class="tile">Bet 0.00025 XBT</li>
+            <li class="tile">Bet 0.0005 XBT</li>
+        </ul>
+    </div>
+    <ul class="game-steps">
+        <li class="step-row">
+            <ul>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="take-reward tile">Take bet * 1.2</li>
+            </ul>
+        </li>
+        <li class="step-row">
+            <ul>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="take-reward tile">Take bet * 1.4</li>
+            </ul>
+        </li>
+        <li class="step-row">
+            <ul>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="take-reward tile">Take bet * 1.6</li>
+            </ul>
+        </li>
+        <li class="step-row">
+            <ul>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="take-reward tile">Take bet * 2</li>
+            </ul>
+        </li>
+        <li class="step-row">
+            <ul>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="take-reward tile">Take bet * 2.5</li>
+            </ul>
+        </li>
+        <li class="step-row">
+            <ul>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="take-reward tile">Take bet * 3</li>
+            </ul>
+        </li>
+        <li class="step-row">
+            <ul>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="take-reward tile">Take bet * 4</li>
+            </ul>
+        </li>
+        <li class="step-row">
+            <ul>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="take-reward tile">Take bet * 5</li>
+            </ul>
+        </li>
+        <li class="step-row">
+            <ul>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="step-tile"></li>
+                <li class="take-reward tile">Take bet * 6</li>
+            </ul>
+        </li>
+        
     </ul>
-    <form id="game_btn">
-            </form>
-
-            <form id="game_btn_small">
-                <input type="button" class="sqd" onclick="$.step(1,0);" disabled="disabled" id="1_0" value=" ">
-<input type="button" class="sqd" onclick="$.step(2,0);" disabled="disabled" id="2_0" value=" ">
-<input type="button" class="sqd" onclick="$.step(3,0);" disabled="disabled" id="3_0" value=" ">
-<input type="button" class="sqd" onclick="$.step(4,0);" disabled="disabled" id="4_0" value=" ">
-<input type="button" class="sqd" onclick="$.step(5,0);" disabled="disabled" id="5_0" value=" ">
-<input type="button" class="takedis reward" disabled="disabled" onclick="$.win_game();" id="level1" value="Take bet * 1.2"><br>
-<input type="button" class="sqd" onclick="$.step(1,1);" disabled="disabled" id="1_1" value=" ">
-<input type="button" class="sqd" onclick="$.step(2,1);" disabled="disabled" id="2_1" value=" ">
-<input type="button" class="sqd" onclick="$.step(3,1);" disabled="disabled" id="3_1" value=" ">
-<input type="button" class="sqd" onclick="$.step(4,1);" disabled="disabled" id="4_1" value=" ">
-<input type="button" class="sqd" onclick="$.step(5,1);" disabled="disabled" id="5_1" value=" ">
-<input type="button" class="takedis reward" disabled="disabled" onclick="$.win_game();" id="level2" value="Take bet * 1.4"><br>
-<input type="button" class="sqd" onclick="$.step(1,2);" disabled="disabled" id="1_2" value=" ">
-<input type="button" class="sqd" onclick="$.step(2,2);" disabled="disabled" id="2_2" value=" ">
-<input type="button" class="sqd" onclick="$.step(3,2);" disabled="disabled" id="3_2" value=" ">
-<input type="button" class="sqd" onclick="$.step(4,2);" disabled="disabled" id="4_2" value=" ">
-<input type="button" class="sqd" onclick="$.step(5,2);" disabled="disabled" id="5_2" value=" ">
-<input type="button" class="takedis reward" disabled="disabled" onclick="$.win_game();" id="level3" value="Take bet * 1.6"><br>
-<input type="button" class="sqd" onclick="$.step(1,3);" disabled="disabled" id="1_3" value=" ">
-<input type="button" class="sqd" onclick="$.step(2,3);" disabled="disabled" id="2_3" value=" ">
-<input type="button" class="sqd" onclick="$.step(3,3);" disabled="disabled" id="3_3" value=" ">
-<input type="button" class="sqd" onclick="$.step(4,3);" disabled="disabled" id="4_3" value=" ">
-<input type="button" class="sqd" onclick="$.step(5,3);" disabled="disabled" id="5_3" value=" ">
-<input type="button" class="takedis reward" disabled="disabled" onclick="$.win_game();" id="level4" value="Take bet * 2"><br>
-<input type="button" class="sqd" onclick="$.step(1,4);" disabled="disabled" id="1_4" value=" ">
-<input type="button" class="sqd" onclick="$.step(2,4);" disabled="disabled" id="2_4" value=" ">
-<input type="button" class="sqd" onclick="$.step(3,4);" disabled="disabled" id="3_4" value=" ">
-<input type="button" class="sqd" onclick="$.step(4,4);" disabled="disabled" id="4_4" value=" ">
-<input type="button" class="sqd" onclick="$.step(5,4);" disabled="disabled" id="5_4" value=" ">
-<input type="button" class="takedis reward" disabled="disabled" onclick="$.win_game();" id="level5" value="Take bet * 2.5"><br>
-<input type="button" class="sqd" onclick="$.step(1,5);" disabled="disabled" id="1_5" value=" ">
-<input type="button" class="sqd" onclick="$.step(2,5);" disabled="disabled" id="2_5" value=" ">
-<input type="button" class="sqd" onclick="$.step(3,5);" disabled="disabled" id="3_5" value=" ">
-<input type="button" class="sqd" onclick="$.step(4,5);" disabled="disabled" id="4_5" value=" ">
-<input type="button" class="sqd" onclick="$.step(5,5);" disabled="disabled" id="5_5" value=" ">
-<input type="button" class="takedis reward" disabled="disabled" onclick="$.win_game();" id="level6" value="Take bet * 3"><br>
-<input type="button" class="sqd" onclick="$.step(1,6);" disabled="disabled" id="1_6" value=" ">
-<input type="button" class="sqd" onclick="$.step(2,6);" disabled="disabled" id="2_6" value=" ">
-<input type="button" class="sqd" onclick="$.step(3,6);" disabled="disabled" id="3_6" value=" ">
-<input type="button" class="sqd" onclick="$.step(4,6);" disabled="disabled" id="4_6" value=" ">
-<input type="button" class="sqd" onclick="$.step(5,6);" disabled="disabled" id="5_6" value=" ">
-<input type="button" class="takedis reward" disabled="disabled" onclick="$.win_game();" id="level7" value="Take bet * 4"><br>
-<input type="button" class="sqd" onclick="$.step(1,7);" disabled="disabled" id="1_7" value=" ">
-<input type="button" class="sqd" onclick="$.step(2,7);" disabled="disabled" id="2_7" value=" ">
-<input type="button" class="sqd" onclick="$.step(3,7);" disabled="disabled" id="3_7" value=" ">
-<input type="button" class="sqd" onclick="$.step(4,7);" disabled="disabled" id="4_7" value=" ">
-<input type="button" class="sqd" onclick="$.step(5,7);" disabled="disabled" id="5_7" value=" ">
-<input type="button" class="takedis reward" disabled="disabled" onclick="$.win_game();" id="level8" value="Take bet * 5"><br>
-<input type="button" class="sqd" onclick="$.step(1,8);" disabled="disabled" id="1_8" value=" ">
-<input type="button" class="sqd" onclick="$.step(2,8);" disabled="disabled" id="2_8" value=" ">
-<input type="button" class="sqd" onclick="$.step(3,8);" disabled="disabled" id="3_8" value=" ">
-<input type="button" class="sqd" onclick="$.step(4,8);" disabled="disabled" id="4_8" value=" ">
-<input type="button" class="sqd" onclick="$.step(5,8);" disabled="disabled" id="5_8" value=" ">
-<input type="button" class="takedis reward" disabled="disabled" onclick="$.win_game();" id="level9" value="Take bet * 6"><br>
-           </form>
 </article>
