--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -26,9 +26,13 @@ aside {
 	padding-right: 20px;
 }
 .game {
-	padding: 0 20px;
+	width: 334px;
+	padding: 0 60px;
 	font-size: 11px;
 	line-height: 38px;
+	border: 1px solid #666;
+	color: white;
+	text-align: center;
 }
 li {
 	float: left;
@@ -107,18 +111,10 @@ header {
 	color: #804e2e;
 }
 .bet-type {
-    list-style: none;
-    margin: 0 auto;
+    margin: 0 auto 25px auto;
+    padding-bottom: 3px;
     display: table;
     border-bottom: 3px solid #804e2e;
-}
-.game {
-	border: 1px solid #666;
-	padding: 0 60px;
-	color: white;
-	font-size: 11px;
-	line-height: 38px;
-	text-align: center;
 }
 .bet-type li,
 .step-row li {
@@ -129,14 +125,27 @@ header {
 	background-color: #804e2e;
 	height: 38px;
 }
+.bet-type ul {
+	padding-top: 20px;
+}
 .bet-type li {
+    line-height: 33px;
+    display: inline;
     width: 108px;
     height: 34px;
-    margin: 0 5px 10px 0;
+    margin: 0 4px 8px 0;
+}
+.bet-type li:nth-child(3),
+.bet-type li:nth-child(6),
+.bet-type li:nth-child(9),
+.bet-type li:nth-child(12) {
+	margin-right: 0px;
+	content: "";
+	display: block;
 }
 .step-row {
 	width: 100%;
-	margin-bottom: 5px;
+	margin-bottom: 8px;
 }
 .step-tile {
 	background-color: #f8a879;
@@ -149,6 +158,7 @@ header {
 	border-radius: 10px;
 	width: 100px;
 	height: 40px;
+	margin-left: 9px;
 }
 footer {
 	text-align: center;
