--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,6 +8,7 @@
     <meta name="description" content="later">
     <meta name="author" content="aaa">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="/images/favicon.ico" />
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/styles.css">
   </head>
