--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{{title}}</title>
+    <title>Bitcoin Kamikaze</title>
     <meta name="description" content="later">
     <meta name="author" content="aaa">
     <meta name="viewport" content="width=device-width, initial-scale=1">
