--- a/views/index.hbs
+++ b/views/index.hbs
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="/js/require.min.js"></script>
     <script type="text/javascript" src="/js/main.js"></script>
   </head>
-  <body data-user="{{data}}">
+  <body data-user="{{toJSON data}}">
       <div class="upper-part">
         {{> aside}}
         {{> game}}
