--- a/views/partials/aside.hbs
+++ b/views/partials/aside.hbs
@@ -1,6 +1,6 @@
 <aside class="aside">
     <header class="header">
-        <a class="logo" href="{{url}}"></a>
+        <a class="logo" href="{{data.url}}"></a>
         <nav class="menu clearfix">
             <ul>
                 <li><a href="#">Deposit</a></li>
@@ -16,7 +16,7 @@
     <div class="info">
         <p>
             This is your personal link. Keep it safe, and <em>keep it secret!</em>
-            <a href="/user/83549/uA1cdR7gwVpBaq9e" class="link">http://bitcoinkamikaze.com/user/83549/uA1cdR7gwVpBaq9e</a>
+            <a href={{data.url}} class="link">{{data.url}}</a>
         </p>
         <p>
             Earn bitcoins by promoting this site (Referral link):
@@ -24,9 +24,9 @@
         </p>
         <div class="info-box bold">
             <div>
-                <span>Balance:</span>
+                <span>Balance:</span><span class="value">{{data.balance}}</span>
                 <a href="#" class="refresh"></a>
-                <span>Current bet: </span><span class="value bet-value">0{{balance}}</span>
+                <span>Current bet: </span><span class="value bet-value">{{data.betValue}}</span>
             </div>
             <span>Jackpot: </span><span class="value jackpot-value">0.001039</span>
         </div>
