--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -1,12 +1,12 @@
 <footer id="footer">    
     <div>
-        <div class="game-data">
+{{!--         <div class="game-data">
             <span>Sha256(Game data):</span><span class="hash">No game started yet.</span>
         </div>
         <div class="game-data">
             <span>Game data:</span><span class="hash">Will be shown after the game has finished.</span>
         </div>
-        <h2>Latest Jackpot Winners</h2>
+ --}}        <h2>Latest Jackpot Winners</h2>
         <table>
             <tbody>
                 <tr>
