--- a/views/partials/aside.hbs
+++ b/views/partials/aside.hbs
@@ -24,9 +24,9 @@
         </p>
         <div class="info-box bold">
             <div>
-                <span>Balance:</span><span class="value">{{data.balance}}</span>
+                <span>Balance:</span><span class="value">{{privateData.balance}}</span>
                 <a href="#" class="refresh"></a>
-                <span>Current bet: </span><span class="value bet-value">{{data.betValue}}</span>
+                <span>Current bet: </span><span class="value bet-value">{{privateData.betValue}}</span>
             </div>
             <span>Jackpot: </span><span class="value jackpot-value">0.001039</span>
         </div>
