--- a/views/partials/game.hbs
+++ b/views/partials/game.hbs
@@ -16,13 +16,15 @@
         </ul>
     </div>
     <ul class="game-steps">
-        {{#each privateData.stepRows}}
+        {{#each privateData.currentProgress}}
             <li class="step-row {{#ifCond @index ../privateData.currentStep}}available{{/ifCond}}">
                 <ul>
-                    {{#each ../privateData.stepTiles}}
-                        <li class="step-tile"></li>
-                    {{/each}}
-                    <li class="take-reward tile">Take bet * {{this.rewardValue}}</li>
+                    <li class="step-tile {{#ifCond this.bomb 0}}bomb{{/ifCond}}{{#ifCond this.step 0}}stepped{{/ifCond}}"></li>
+                    <li class="step-tile {{#ifCond this.bomb 1}}bomb{{/ifCond}}{{#ifCond this.step 1}}stepped{{/ifCond}}"></li>
+                    <li class="step-tile {{#ifCond this.bomb 2}}bomb{{/ifCond}}{{#ifCond this.step 2}}stepped{{/ifCond}}"></li>
+                    <li class="step-tile {{#ifCond this.bomb 3}}bomb{{/ifCond}}{{#ifCond this.step 3}}stepped{{/ifCond}}"></li>
+                    <li class="step-tile {{#ifCond this.bomb 4}}bomb{{/ifCond}}{{#ifCond this.step 4}}stepped{{/ifCond}}"></li>
+                    <li class="take-reward tile {{#ifCond @index ../privateData.takeRewardIndex}}take-it{{/ifCond}}">Take bet * {{this.rewardValue}}</li>
                 </ul>
             </li>
         {{/each}}
