worked on the modals

--- a/views/partials/aside.hbs
+++ b/views/partials/aside.hbs
@@ -3,7 +3,7 @@
         <a class="logo" href="{{data.url}}"></a>
         <nav class="menu clearfix">
             <ul>
-                <li><a href="#">Deposit</a></li>
+                <li><a class="deposit" href="#">Deposit</a></li>
                 <li> • </li>
                 <li><a href="#">Withdraw</a></li>
                 <li> • </li>
