--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -303,3 +303,23 @@ list-style:none;
 margin:0;
 padding:0;
 }
+
+#simplemodal-overlay {background-color:#000;}
+
+#simplemodal-container {
+    background-color:#fff;
+    border:8px solid #444;
+    padding:12px;
+}
+
+#simplemodal-container a.modalCloseImg {
+    background:url(../images/x.png) no-repeat; /* adjust url as required */
+    width:25px;
+    height:29px;
+    display:inline;
+    z-index:3200;
+    position:absolute;
+    top:-15px;
+    right:-18px;
+    cursor:pointer;
+}
