worked on modals

--- a/views/partials/aside.hbs
+++ b/views/partials/aside.hbs
@@ -5,9 +5,9 @@
             <ul>
                 <li><a class="deposit" href="#">Deposit</a></li>
                 <li> • </li>
-                <li><a href="#">Withdraw</a></li>
+                <li><a class="withdraw" href="#">Withdraw</a></li>
                 <li> • </li>
-                <li><a href="#">Refer</a></li>
+                <li><a class="refer" href="#">Refer</a></li>
                 <li> • </li>
                 <li><a href="#">Forum</a></li>
             </ul>
