--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -308,8 +308,8 @@ padding:0;
 
 #simplemodal-container {
     background-color:#fff;
-    border:8px solid #444;
-    padding:12px;
+    border: 8px solid #444;
+    padding: 10px 20px;
 }
 
 #simplemodal-container a.modalCloseImg {
@@ -323,3 +323,65 @@ padding:0;
     right:-18px;
     cursor:pointer;
 }
+
+.simplemodal-data .with-address {
+    width: 198px;
+}
+
+.simplemodal-data .with-amount {
+    width: 60px;
+}
+
+.simplemodal-data .field {
+    width: 100%;
+    height: 40px;
+    font-size: 14px;
+    color: grey;
+}
+.simplemodal-data label {
+    display: inline-block;
+    margin-right: 20px;
+    width: 200px;
+    text-align: right;
+}
+
+.simplemodal-data .withdraw-btn {
+    text-align: center;
+}
+
+.simplemodal-data button {
+    outline: none;
+    font-size: 16px;
+    background: rgb(223, 117, 20);
+    color: white;
+    border-radius: 4px;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+    display: inline-block;
+    zoom: 1;
+    line-height: normal;
+    white-space: nowrap;
+    vertical-align: baseline;
+    text-align: center;
+    cursor: pointer;
+    text-transform: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.simplemodal-data button:hover {
+    progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#1a000000', GradientType=0);
+    background-image: -webkit-gradient(linear,0 0,0 100%,from(transparent),color-stop(40%,rgba(0,0,0,.05)),to(rgba(0,0,0,.1)));
+    background-image: -webkit-linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));
+    background-image: -moz-linear-gradient(top,rgba(0,0,0,.05) 0,rgba(0,0,0,.1));
+    background-image: -o-linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));
+    background-image: linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));    
+}
+
+.simplemodal-data button:active {
+    box-shadow: 0 0 0 1px rgba(0,0,0,.15) inset,0 0 6px rgba(0,0,0,.2) inset;
+}
+
+
