--- a/views/partials/aside.hbs
+++ b/views/partials/aside.hbs
@@ -24,7 +24,7 @@
         </p>
         <div class="info-box bold">
             <div>
-                <span>Balance:</span><span class="value">{{privateData.balance}}</span>
+                <span>Balance:</span><span class="balance value">{{privateData.balance}}</span>
                 <a href="#" class="refresh"></a>
                 <span>Current bet: </span><span class="value bet-value">{{privateData.betValue}}</span>
             </div>
