finished jackpot accumulation

--- a/views/partials/aside.hbs
+++ b/views/partials/aside.hbs
@@ -28,7 +28,7 @@
                 <a href="#" class="refresh"></a>
                 <span>Current bet: </span><span class="value bet-value">{{privateData.betValue}}</span>
             </div>
-            <span>Jackpot: </span><span class="value jackpot-value">0.001039</span>
+            <span>Jackpot: </span><span class="value jackpot-value">{{privateData.jackpot}}</span>
         </div>
         <h2>How To Play</h2>
         <p>
