more stuff for the jackpot. fix the jackpot TILE

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -68,6 +68,10 @@ font-weight:700;
     background-position: 0px -206px;
 }
 
+.step-tile.jackpot.stepped {
+    background-position: -2px -158px;
+}
+
 .clearfix {
 zoom:1;
 }
